@@ -1,2 +1,7 @@
 # JavaFxEmailClient
-JavaFX Email Client
+Desktop application, E-mail client written using the JavaFx library.
+
+Instructions for execute output file in the out/artifacts/JavaFxEmailClient_jar:
+
+Type in the terminal:
+java --module-path <path-to-your-javafx-sdk\lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web -jar JavaFxEmailClient.jar
